--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     <!-- 1. Quantified self -->
                     <div id="project-one">
                         <div class="project">
-                            <a href="/quantified-self.html"><img src="images/projects/quantified-self.png" alt="project image" class="project-image" id="quantified-self-image"></a>
+                            <a href="/portfolio.github.io/quantified-self.html"><img src="images/projects/quantified-self.png" alt="project image" class="project-image" id="quantified-self-image"></a>
                             <h2 class="project-name" id="project-one-name">quantified self</h2>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                     <!-- 2. weHop -->
                     <div id="project-two">
                         <div class="project">
-                            <a href="/wehop.html"><img src="images/projects/wehop.png" alt="project image" class="project-image" id="wehop-image"></a>
+                            <a href="/portfolio.github.io/wehop.html"><img src="images/projects/wehop.png" alt="project image" class="project-image" id="wehop-image"></a>
                             <h2 class="project-name" id="project-two-name">weHop</h2>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                         <div class="left-section">
 
                             <div class="resume-btn-container">
-                                <a href="/files/CV.pdf" download>
+                                <a href="files/CV.pdf" download>
                                     <div class="resume-btn">
                                         <i class="fa-solid fa-circle-down"></i>
                                         resumé
@@ -351,7 +351,7 @@
 
                             <div class="coverletter-btn-container">
                                 
-                                <a href="/files/cover_letter.pdf" download>
+                                <a href="files/cover_letter.pdf" download>
                                     <div class="coverletter-btn">
                                         <i class="fa-solid fa-circle-down"></i>
                                         cover letter
