--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <div class="left-section">
 
                             <div class="resume-btn-container">
-                                <a href="files/CV.pdf" download>
+                                <a href="files/resume_ninna_svanstrom.pdf" download>
                                     <div class="resume-btn">
                                         <i class="fa-solid fa-circle-down"></i>
                                         resumé
@@ -351,7 +351,7 @@
 
                             <div class="coverletter-btn-container">
                                 
-                                <a href="files/cover_letter.pdf" download>
+                                <a href="files/cover_letter_ninna_svanstrom.pdf" download>
                                     <div class="coverletter-btn">
                                         <i class="fa-solid fa-circle-down"></i>
                                         cover letter
