--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
                             <p class="grid-text">Creative</p>
                         </li>
                         <li>
-                            <p class="grid-text">Persistent</p>
+                            <p class="grid-text">Diligent</p>
                         </li>
                         <li>
-                            <p class="grid-text">Diligent</p>
+                            <p class="grid-text">Empathetic</p>
                         </li>
                     </ol>
                 </div>
@@ -264,13 +264,13 @@
                     </div>
                     <ol>
                         <li>
-                            <p class="grid-text">Distracted</p>
+                            <p class="grid-text">Wandering mind</p>
                         </li>
                         <li>
-                            <p class="grid-text">Not competitive</p>
+                            <p class="grid-text">Noncompetitive</p>
                         </li>
                         <li>
-                            <p class="grid-text">Shy</p>
+                            <p class="grid-text">Timid</p>
                         </li>
                     </ol>
                 </div>
