--- a/quantified-self.html
+++ b/quantified-self.html
@@ -105,7 +105,7 @@
                 </p>
             </div>
             <div class="demo">
-            <video autoplay loop class="demo-media">
+            <video autoplay loop controls class="demo-media">
                 <source src="images/projects/project01-video1.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -121,7 +121,7 @@
                 </p>
             </div>
             <div class="demo">
-            <video width="800" height="600" autoplay loop class="demo-media">
+            <video width="800" height="600" autoplay loop controls class="demo-media">
                 <source src="images/projects/project01-video2.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -137,7 +137,7 @@
                 </p>
             </div>
             <div class="demo">
-            <video width="800" height="600" autoplay loop class="demo-media">
+            <video width="800" height="600" autoplay controls loop class="demo-media">
                 <source src="images/projects/project01-video3.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -154,7 +154,7 @@
                 </p>
             </div>
             <div class="demo">
-            <video width="800" height="600" autoplay loop class="demo-media">
+            <video width="800" height="600" controls autoplay loop class="demo-media">
                 <source src="images/projects/project01-video4.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
