--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     <div id="project-one">
                         <div class="project">
                             <a href="/portfolio/quantified-self.html"><img src="images/projects/quantified-self.png" alt="project image" class="project-image" id="quantified-self-image"></a>
-                            <h2 class="project-name" id="project-one-name">quantified self</h2>
+                             <a href="/portfolio/quantified-self.html"><h2 class="project-name" id="project-one-name">quantified self</h2></a>
                         </div>
                     </div>
 
@@ -312,7 +312,7 @@
                     <div id="project-two">
                         <div class="project">
                             <a href="/portfolio/wehop.html"><img src="images/projects/wehop.png" alt="project image" class="project-image" id="wehop-image"></a>
-                            <h2 class="project-name" id="project-two-name">weHop</h2>
+                             <a href="/portfolio/wehop.html"><h2 class="project-name" id="project-two-name">weHop</h2></a>
                         </div>
                     </div>
 
