--- a/wehop.html
+++ b/wehop.html
@@ -153,7 +153,7 @@
                 
                     <h3>Website <span class="symbol hexagon">&#11042;</span></h3>
                     <br>
-                    <p>The website of the project can be found <strong><u><a href="http://www.idxpo.se/2022/wehop/index.html">here</a></u></strong>.
+                    <p>The website of the project can be found <strong><u><a href="http://idxpo.se/2022/group_10/index.html">here</a></u></strong>.
                 </p>
             </div>
             <div class="demo">
