--- a/wehop.html
+++ b/wehop.html
@@ -154,6 +154,8 @@
                     <h3>Website <span class="symbol hexagon">&#11042;</span></h3>
                     <br>
                     <p>The website that I created for the project can be found <strong><u><a href="http://idxpo.se/2022/group_10/index.html" target="_blank">here</a></u></strong>.
+                        <br>
+Please note that it has unfortunately not been designed to be responsive for mobile phones. 
                 </p>
             </div>
             <div class="demo">
