--- a/index.html
+++ b/index.html
@@ -316,12 +316,13 @@
                         </div>
                     </div>
 
-                    <!-- 3. DiscoVerse
+                    <!-- 3. DiscoPop -->
                     <div id="project-three">
                         <div class="project">
-                            <a href="/html/quantified-self.html"><img src="images/projects/discoverse.png" alt="project image" class="project-image"></a>
+                            <a href="/portfolio/discopop.html"><img src="images/projects/discopop.png" alt="project image" class="project-image" id="discopop-image"></a>
+                             <a href="/portfolio/discopop.html"><h2 class="project-name" id="project-three-name">DiscoPop</h2></a>
                         </div>
-                    </div> -->
+                    </div>
 
                 </div>
 
