--- a/quantified-self.html
+++ b/quantified-self.html
@@ -101,7 +101,7 @@
             <div class="demo-description">
                     <h3>Educational background <span class="symbol">&#9829;</span> Traveling</h3>
                     <br>
-                    <p>My educational background is being presented in a drawing of a trajectory of my life. The locations and the departments are marked along the path, and the illustrations refer to the different locations. The viewer can hover over each bullet point which represents an educational milestone, and if they click on the name of the school, a dialog to the left appears which holds more information. This visualization is based on my passion for traveling.  
+                    <p>My educational background is being presented in a drawing of a trajectory of my life. The locations and the departments are marked along the path, and the illustrations refer to the different locations. The viewer can hover over each bullet point which represents an educational milestone, and if they click on the name of the school, a dialog to the right appears which holds more information. This visualization is based on my passion for traveling.  
                 </p>
             </div>
             <div class="demo">
